# kboBack

./: .gitignore  Dockerfile  Dockerfile-dev  Dockerfile-local  Dockerfile-prod  README.md  docker-compose-dev.yml  docker-compose-local.yml  docker-compose-prod.yml  docker-compose.yml  docker_builder.sh  gunicorn_conf.py  manage.py  requirements.txt
backend/: .pre-commit-config.yaml  Dockerfile  config.toml  config_example.toml  docker-compose.yml  game_info.csv  manage.py  pyproject.toml  requirements.txt
backend/apis/: exceptions.py  urls.py
backend/apis/alerts/: urls.py  views.py
backend/apis/auths/: serializers.py  services.py  swagger.py  urls.py  utils.py  views.py
backend/apis/games/: serializers.py  swagger.py  urls.py  views.py
backend/apis/notifications/: enums.py  serializers.py  swagger.py  urls.py  views.py
backend/apis/teams/: serializers.py  swagger.py  urls.py  views.py
backend/apis/tickets/: serializers.py  service.py  services.py  swagger.py  urls.py  views.py
backend/apis/uploads/: services.py  swagger.py  urls.py  views.py
backend/apis/users/: selectors.py  serializers.py  services.py  swagger.py  urls.py  views.py
backend/apps/admins/: admin.py  custom_forms.py  custom_site.py  mixins.py  models.py  tasks.py
backend/apps/alerts/: __init__.py  config.py
backend/apps/auths/: __init__.py  chocies.py  config.py  models.py
backend/apps/games/: __init__.py  admin.py  config.py  models.py
backend/apps/notifications/: __init__.py  admin.py  config.py  enums.py  models.py
backend/apps/teams/: __init__.py  admin.py  config.py  models.py
backend/base/: authentication.py  middlewares.py  mixins.py  models.py
backend/conf/: celery.py  gunicorn_conf.py  middleware.py  settings.py  urls.py  utils.py
backend/scripts/: init_script.py
games/: admin.py  (+1 more)
(+104 files in other folders)
